# SCONE

./: .gitignore  README.md  pyproject.toml
bench/: __init__.py  ablate_mu_field.py  compare.py  eval.py  learn_eval.py  p3_mu_interpret.py
bench/suites/: learn_mu.yaml  learn_mu_field.yaml  learn_mu_field_gate.yaml  learn_mu_pair.yaml  mvp.yaml  mvp_ood.yaml
configs/: bench_ood_disk_roll_2d_mass.yaml  bench_ood_disk_stack_2d_dt.yaml  bench_ood_disk_stack_2d_mass.yaml  bench_ood_disk_stack_2d_radius.yaml  learn_mu_field_stack_id.yaml  learn_mu_field_stack_material_holdout.yaml  learn_mu_field_stack_material_stress.yaml  learn_mu_field_stack_stress.yaml  learn_mu_pair_stack_id.yaml  learn_mu_pair_stack_ident_stress.yaml  learn_mu_stack_id.yaml  learn_mu_stack_id_reg.yaml  mvp_bounce.yaml  mvp_damped.yaml  mvp_disk_roll_2d.yaml  mvp_disk_stack_2d.yaml  mvp_harmonic.yaml
docs/: spec.md  temp-01.md
docs/temp/2·5/: temp-01.md  temp-02.md  temp-03.md
docs/temp/2·6/: temp-01.md  temp-02.md
scripts/: run_mvp.py  train_m2_mu_pgs_stack.py  train_m2_mu_pgs_stack_field.py  train_m2_mu_pgs_stack_pair.py  train_m2_mu_rollout.py  train_m2_scalar_mu.py
src/scone/: contacts.py  diagnostics.py  engine.py  sleep.py  state.py
tests/: test_bench_compare.py  test_constraints_layer.py  test_disk_ground_contact.py  test_disk_stack_pgs.py  test_engine_failsafe_ledger.py  test_learn_eval_field_ident.py  test_learned_mu.py  test_m2_mu_pgs_stack.py  test_m2_mu_pgs_stack_field.py  test_m2_mu_pgs_stack_pair_mu.py  test_m2_mu_rollout.py  test_p3_mu_interpret.py  test_sleep_manager.py
(+12 files in other folders)
